test: add --add-opens to EngineLargeStatePerformanceTest